--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -76,7 +76,7 @@
   </ion-item>
 
   <ion-item *ngIf="showDelete">
-    <ion-chip  outline color="danger">
+    <ion-chip color="danger">
       <ion-button fill="clear" (click)="deleteUserList()">
           <div class="ion-text-center">
         <ion-label>Cancelar presença</ion-label></div>
