--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -15,23 +15,21 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-
-  <ion-item lines="none">
-    <ion-avatar slot="start">
-      <img src="assets/img/img_avatar.png">
-    </ion-avatar>
-    <ion-label>
-      <h2>{{product.nameUser}}</h2>
-      <p>Criado em: {{ product.createdAt  | date: 'dd/MM/yy'  }}</p>
-    </ion-label>
-  </ion-item>
-
   <ion-card>
-    <ion-label>
-      <ion-item lines="full">
-        {{product.name}}
-      </ion-item>
-    </ion-label>
+    <ion-item lines="full">
+      <ion-avatar slot="start">
+        <img src="assets/img/img_avatar.png">
+      </ion-avatar>
+      <ion-label>
+        <h2>{{product.nameUser}}</h2>
+        <p>Criado em: {{ product.createdAt  | date: 'dd/MM/yy'  }}</p>
+      </ion-label>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-card-content>
+        <p>{{product.description}} </p>
+      </ion-card-content>
+    </ion-item>
     <ion-item lines="full">
       <ion-label>
         <ion-icon name="calendar" color="primary"></ion-icon>
@@ -57,14 +55,7 @@
         {{product.distance}} km
       </ion-label>
     </ion-item>
-    <ion-item lines="none">
-      Descrição do Evento:
-    </ion-item>
-    <ion-item lines="none">
-      <ion-card-content>
-        <p>{{product.description}} </p>
-      </ion-card-content>
-    </ion-item>
+
   </ion-card>
 
   <ion-item *ngIf="showAdd">
@@ -78,25 +69,26 @@
   <ion-item *ngIf="showDelete">
     <ion-chip color="danger">
       <ion-button fill="clear" (click)="deleteUserList()">
-          <div class="ion-text-center">
-        <ion-label>Cancelar presença</ion-label></div>
+        <div class="ion-text-center">
+          <ion-label>Cancelar presença</ion-label>
+        </div>
       </ion-button>
     </ion-chip>
   </ion-item>
 
   <!-- lista de presença -->
-  
+
   <ion-list>
-      <ion-item *ngFor="let listUser of listUsers">
-          <ion-icon slot="end" name="checkmark" color="success"></ion-icon>
+    <ion-item *ngFor="let listUser of listUsers">
+      <ion-icon slot="end" name="checkmark" color="success"></ion-icon>
       <ion-avatar slot="start">
         <img src="/assets/img/img_avatar.png">
       </ion-avatar>
-      <ion-label >
+      <ion-label>
         <h2>{{listUser.nameUser}}</h2>
       </ion-label>
     </ion-item>
-</ion-list>
+  </ion-list>
 
 </ion-content>
 <!--
