--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -21,8 +21,9 @@
         <img src="assets/img/img_avatar.png">
       </ion-avatar>
       <ion-label>
-        <h2>{{product.nameUser}}</h2>
+        <h3>{{product.nameUser}}</h3>
         <p>Criado em: {{ product.createdAt  | date: 'dd/MM/yy'  }}</p>
+        <p><ion-icon name="pin"></ion-icon>{{product.cities}}</p>
       </ion-label>
     </ion-item>
     <ion-item lines="full">
