--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -8,12 +8,17 @@
         <ion-icon name="share-alt" slot="end"></ion-icon>
       </ion-button>
     </ion-buttons>
-
     <ion-title>{{product.name}}</ion-title>
   </ion-toolbar>
-
 </ion-header>
+ <ion-content>
 
+ </ion-content>
+
+
+
+
+<!--
 <ion-content class="ion-padding">
   <ion-card>
     <ion-item lines="full">
@@ -77,7 +82,7 @@
     </ion-chip>
   </ion-item>
 
-  <!-- lista de presença -->
+lista de presença 
 
   <ion-list>
     <ion-item *ngFor="let listUser of listUsers">
@@ -91,12 +96,5 @@
     </ion-item>
   </ion-list>
 
-</ion-content>
-<!--
-<ion-footer>
-  <ion-toolbar>
-    <ion-button (click)="saveProduct()" expand="block">
-      Salvar Evento
-    </ion-button>
-  </ion-toolbar>
-</ion-footer>-->
+</ion-content> -->
+
