--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -8,93 +8,112 @@
         <ion-icon name="share-alt" slot="end"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{product.name}}</ion-title>
+
   </ion-toolbar>
 </ion-header>
- <ion-content>
-
- </ion-content>
-
-
-
-
-<!--
 <ion-content class="ion-padding">
   <ion-card>
-    <ion-item lines="full">
+    <ion-item lines="none">
       <ion-avatar slot="start">
         <img src="assets/img/img_avatar.png">
       </ion-avatar>
       <ion-label>
         <h3>{{product.nameUser}}</h3>
         <p>Criado em: {{ product.createdAt  | date: 'dd/MM/yy'  }}</p>
-        <p><ion-icon name="pin"></ion-icon>{{product.cities}}</p>
+        <p>{{product.cities}}</p>
       </ion-label>
     </ion-item>
-    <ion-item lines="full">
-      <ion-card-content>
-        <p>{{product.description}} </p>
-      </ion-card-content>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label>
-        <ion-icon name="calendar" color="primary"></ion-icon>
-        {{ product.dtEvent | date: 'dd/MM/yy'  }} Horário
-        {{ product.dtEvent | date:  'h:mm'  }}
-      </ion-label>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label>
-        <ion-icon name="bicycle" color="primary"></ion-icon>
-        {{product.modalidade}}
-      </ion-label>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label>
-        <ion-icon name="pulse" size="medium" color="primary"></ion-icon>
-        {{product.nivel}}
-      </ion-label>
-    </ion-item>
-    <ion-item lines="full">
-      <ion-label>
-        <ion-icon name="flame" color="primary"></ion-icon>
-        {{product.distance}} km
-      </ion-label>
-    </ion-item>
-
   </ion-card>
-
-  <ion-item *ngIf="showAdd">
-    <ion-chip outline color="primary">
-      <ion-button fill="clear" (click)="addUserList()">
-        <ion-label>Confirme sua presença</ion-label>
-      </ion-button>
-    </ion-chip>
-  </ion-item>
-
-  <ion-item *ngIf="showDelete">
-    <ion-chip color="danger">
-      <ion-button fill="clear" (click)="deleteUserList()">
-        <div class="ion-text-center">
-          <ion-label>Cancelar presença</ion-label>
-        </div>
-      </ion-button>
-    </ion-chip>
-  </ion-item>
-
-lista de presença 
-
-  <ion-list>
-    <ion-item *ngFor="let listUser of listUsers">
-      <ion-icon slot="end" name="checkmark" color="success"></ion-icon>
-      <ion-avatar slot="start">
-        <img src="/assets/img/img_avatar.png">
-      </ion-avatar>
-      <ion-label>
-        <h2>{{listUser.nameUser}}</h2>
-      </ion-label>
+  <ion-card class="corpo">
+    <ion-item lines="none">
+      <ion-grid>
+        <ion-row>
+          <ion-col>
+            <ion-card>
+              <ion-item lines="none">
+                <ion-img src="assets/img/timer.png"></ion-img>
+              </ion-item>
+              <ion-item lines="none">
+                <ion-label>
+                  <p>{{ product.dtEvent | date: 'dd/MM/yy'  }}</p>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+          <ion-col>
+            <ion-card>
+              <ion-item lines="none">
+                <ion-img src="assets/img/cyclist.png"></ion-img>
+              </ion-item>
+              <ion-item lines="none">
+                <ion-label>
+                  <p>{{product.modalidade}}</p>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-card>
+              <ion-item lines="none">
+                <ion-img src="assets/img/distance.png"></ion-img>
+              </ion-item>
+              <ion-item lines="none">
+                <ion-label>
+                  <p>{{product.distance}}Km</p>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+          <ion-col>
+            <ion-card>
+              <ion-item lines="none">
+                <ion-img src="assets/img/meter.png"></ion-img>
+              </ion-item>
+              <ion-item lines="none">
+                <ion-label>
+                  <p>{{product.nivel}}</p>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-card>
+              <ion-item lines="none">
+                <ion-label>
+                  <p>{{product.description}}</p>
+                </ion-label>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
     </ion-item>
-  </ion-list>
+  </ion-card>
+  <ion-card>
+    <ion-list>
+      <ion-item *ngFor="let listUser of listUsers" lines="none">
+        <ion-icon slot="end" name="checkmark" color="success"></ion-icon>
+        <ion-avatar slot="start">
+          <img src="/assets/img/img_avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>{{listUser.nameUser}}</h2>
+        </ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-card>
+</ion-content>
 
-</ion-content> -->
+<ion-footer>
+  <ion-button expand="full" (click)="addUserList()" *ngIf="showAdd" color="primary">
+    <ion-label>Confirme sua presença</ion-label>
+  </ion-button>
+  <ion-button expand="full" (click)="deleteUserList()" *ngIf="showDelete" color="danger"> 
+         <ion-label>Cancelar presença</ion-label>
+    </ion-button>
+</ion-footer>
 
