--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -5,7 +5,28 @@
     }
     
     ion-content {
-        margin-top: 0px;
-        --background: url('/assets/img/background.jpg') no-repeat 50% 50%;
-        
-    }
+
+
+    .corpo{
+      
+
+       ion-img{
+            padding-top: 5px;
+            margin: auto auto;
+            width: 50px;
+            height: 50px;
+            
+        }
+
+            ion-label{
+                text-align: center;
+                font-family:Arial, Helvetica, sans-serif;
+            }
+
+                ion-row{
+                    margin-top: -25px;
+                    margin-bottom: 0px;
+                }
+
+     }
+}
