--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -11,11 +11,11 @@
 
   </ion-toolbar>
 </ion-header>
-<ion-content class="ion-padding">
+<ion-content color="medium">
   <ion-card>
     <ion-item lines="none">
       <ion-avatar slot="start">
-        <img src="assets/img/img_avatar.png">
+        <img src="assets/img/biker.png">
       </ion-avatar>
       <ion-label>
         <h3>{{product.nameUser}}</h3>
@@ -31,7 +31,7 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/timer.png"></ion-img>
+                <ion-img src="assets/img/circular-clock.png"></ion-img>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -43,7 +43,7 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/cyclist.png"></ion-img>
+                <ion-img src="assets/img/bike.png"></ion-img>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -57,7 +57,7 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/distance.png"></ion-img>
+                <ion-img src="assets/img/racing.png"></ion-img>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -69,7 +69,7 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/meter.png"></ion-img>
+                <ion-img src="assets/img/smartwatch.png"></ion-img>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -83,9 +83,9 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                  <ion-card-content>
-                      <p>{{product.description}}</p>
-                    </ion-card-content>
+                <ion-card-content>
+                  <p>{{product.description}}</p>
+                </ion-card-content>
               </ion-item>
             </ion-card>
           </ion-col>
@@ -98,7 +98,7 @@
       <ion-item *ngFor="let listUser of listUsers" lines="none">
         <ion-icon slot="end" name="checkmark" color="success"></ion-icon>
         <ion-avatar slot="start">
-          <img src="/assets/img/img_avatar.png">
+          <img src="/assets/img/biker.png">
         </ion-avatar>
         <ion-label>
           <h2>{{listUser.nameUser}}</h2>
@@ -109,10 +109,12 @@
 </ion-content>
 
 <ion-footer>
-  <ion-button expand="full" (click)="addUserList()" *ngIf="showAdd" color="primary">
-    <ion-label>Confirme sua presença</ion-label>
-  </ion-button>
-  <ion-button expand="full" (click)="deleteUserList()" *ngIf="showDelete" color="danger">
-    <ion-label>Cancelar presença</ion-label>
-  </ion-button>
+  <ion-toolbar>
+    <ion-button expand="block" (click)="addUserList()" *ngIf="showAdd" color="primary">
+      <ion-label>Confirme sua presença</ion-label>
+    </ion-button>
+    <ion-button expand="block" (click)="deleteUserList()" *ngIf="showDelete" color="danger">
+      <ion-label>Cancelar presença</ion-label>
+    </ion-button>
+  </ion-toolbar>
 </ion-footer>
