--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -31,7 +31,11 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/circular-clock.png"></ion-img>
+
+                <ion-avatar>
+                  <img src="assets/img/circular-clock.png">
+                </ion-avatar>
+
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -43,7 +47,9 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/bike.png"></ion-img>
+                <ion-avatar>
+                  <img src="assets/img/bike.png">
+                </ion-avatar>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -57,7 +63,9 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/racing.png"></ion-img>
+                  <ion-avatar>
+                      <img src="assets/img/pin.png">
+                    </ion-avatar>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
@@ -69,7 +77,9 @@
           <ion-col>
             <ion-card>
               <ion-item lines="none">
-                <ion-img src="assets/img/smartwatch.png"></ion-img>
+                  <ion-avatar>
+                      <img src="assets/img/smartwatch.png">
+                    </ion-avatar>
               </ion-item>
               <ion-item lines="none">
                 <ion-label>
