--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -4,12 +4,15 @@
 
     .corpo{
       
-
-       ion-img{
+     
+        
+       ion-avatar{
             padding-top: 2px;
-            width: 40px;
-            height: 40px;
-            --border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            
+            
+            
             
         }
 
