--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -1,4 +1,43 @@
-<ion-header>
+<ion-header color="medium">
+  <ion-toolbar color="medium">
+    <ion-buttons slot="start">
+      <ion-buttons slot="start">
+        <ion-back-button text="VOLTAR"></ion-back-button>
+      </ion-buttons>
+    </ion-buttons>
+    <ion-buttons slot="primary">
+      <ion-button fill="clear" (click)="shared()">
+        <ion-icon name="share-alt" slot="end"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
+<ion-content color="medium">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="8">
+        {{product.description}}
+      </ion-col>
+      <ion-col size="4">
+        <ion-item color="medium" lines="none">
+          <ion-avatar>
+            <img src="assets/img/biker.png">
+          </ion-avatar>
+        </ion-item>
+        <ion-item color="medium" lines="none">
+            <ion-label>
+              {{product.nameUser}}
+            </ion-label>
+          </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</ion-content>
+
+
+
+
+<!--<ion-header>
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button text="Voltar"></ion-back-button>
@@ -127,4 +166,4 @@
       <ion-label>Cancelar presença</ion-label>
     </ion-button>
   </ion-toolbar>
-</ion-footer>
+</ion-footer> -->
