--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -1,36 +1,4 @@
 
-    ion-content {
-
-
-    .corpo{
-      
-     
-        
-       ion-avatar{
-            padding-top: 2px;
-            width: 60px;
-            height: 60px;
-            
-            
-            
-            
-        }
-
-            ion-label{
-                text-align: center;
-                font-family:Arial, Helvetica, sans-serif;
-            }
-
-                ion-row{
-                    margin-top: -10px;
-                    margin-bottom: 0px;
-                }
-
-     }
-
-     
-}
-
-ion-toolbar {
-    --background:#0890a2;
-}
+ion-icon {
+    font-size: 64px;
+  }
