--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -48,7 +48,7 @@
 
     <ion-item color="medium">
       <ion-avatar slot="end">
-        <img src="assets/img/pin.png">
+        <img src="assets/img/circular-clock.png">
       </ion-avatar>
       <ion-label>
         <h2>Data / Hora</h2>
@@ -58,32 +58,32 @@
 
     <ion-item color="medium">
       <ion-avatar slot="end">
-        <img src="./avatar-han.png">
+        <img src="assets/img/pin.png">
       </ion-avatar>
       <ion-label>
-        <h2>Han</h2>
-        <h3>Look, kid...</h3>
+        <h2>Distância</h2>
+        <h3>{{product.distance}}Km</h3>
     
       </ion-label>
     </ion-item>
 
     <ion-item color="medium">
       <ion-avatar slot="end">
-        <img src="./avatar-rey.png">
+        <img src="assets/img/bike.png">
       </ion-avatar>
       <ion-label>
-        <h2>Rey</h2>
-        <h3>I can handle myself</h3>
+        <h2>Modalidade</h2>
+        <h3>{{product.modalidade}}</h3>
       </ion-label>
     </ion-item>
 
     <ion-item color="medium">
       <ion-avatar slot="end">
-        <img src="./avatar-luke.png">
+        <img src="assets/img/smartwatch.png">
       </ion-avatar>
       <ion-label>
-        <h2>Luke</h2>
-        <h3>Your thoughts betray you</h3>
+        <h2>Nível</h2>
+        <h3>{{product.nivel}}</h3>
         </ion-label>
     </ion-item>
   </ion-list>
