--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -15,19 +15,15 @@
 <ion-content color="medium">
   <ion-grid>
     <ion-row>
-      <ion-col size="7">
-        <ion-label text-wrap>
-          <h4>{{product.description}}</h4>
-        </ion-label>
-
-      </ion-col>
-      <ion-col size="5">
+      <ion-col size="4">
         <ion-item class="avatar" color="medium" lines="none">
           <ion-avatar>
             <img src="assets/img/biker.png">
           </ion-avatar>
         </ion-item>
-        <ion-item class="nome" color="medium" lines="none">
+      </ion-col>
+      <ion-col class="ColunaNome" size="8">
+        <ion-item class="nome" color="medium" lines="full">
           <ion-label>
             <h6>{{product.nameUser}}</h6>
           </ion-label>
@@ -73,7 +69,6 @@
           <h3>{{product.modalidade}}</h3>
         </ion-label>
       </ion-item>
-
       <ion-item color="medium">
         <ion-avatar slot="end">
           <img src="assets/img/smartwatch.png">
@@ -86,147 +81,29 @@
     </ion-list>
   </div>
 
-  <div>
- 
-    <ion-button class="btnAddUser" slot="start" shape="round" size="small" fill="outline" (click)="addUserList()" *ngIf="showAdd"> <ion-icon slot="start" name="person" size="small"></ion-icon>
-      <ion-label>Confirme sua presença</ion-label>
-    </ion-button>
-    <ion-button shape="round" size="small" fill="outline" (click)="deleteUserList()" *ngIf="showDelete" color="danger" slot="end">
-      <ion-label>Cancelar presença</ion-label>
-    </ion-button>
+  <div class="descricao">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-label text-wrap>
+            <h4>{{product.description}}</h4>
+          </ion-label>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
   </div>
 </ion-content>
+<ion-footer>
+  <ion-toolbar color="medium">
+  
+     <ion-buttons slot="primary">
+       
+      <ion-button (click)="UserList()">
+          <ion-label>Lista de presença </ion-label> 
+        <ion-icon  name="arrow-up" size="small"></ion-icon>
 
-
-
-
-<!--<ion-header>
-  <ion-toolbar>
-    <ion-buttons>
-      <ion-back-button text="Voltar"></ion-back-button>
-    </ion-buttons>
-    <ion-buttons slot="primary">
-      <ion-button fill="clear" (click)="shared()">
-        <ion-icon name="share-alt" slot="end"></ion-icon>
       </ion-button>
     </ion-buttons>
-
   </ion-toolbar>
-</ion-header>
-<ion-content color="medium">
-  <ion-card>
-    <ion-item lines="none">
-      <ion-avatar slot="start">
-        <img src="assets/img/biker.png">
-      </ion-avatar>
-      <ion-label>
-        <h3>{{product.nameUser}}</h3>
-        <p>Criado em: {{ product.createdAt  | date: 'dd/MM/yy'  }}</p>
-        <p>{{product.cities}}</p>
-      </ion-label>
-    </ion-item>
-  </ion-card>
-  <ion-card class="corpo">
-    <ion-item lines="none">
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-            <ion-card>
-              <ion-item lines="none">
+</ion-footer>
 
-                <ion-avatar>
-                  <img src="assets/img/circular-clock.png">
-                </ion-avatar>
-
-              </ion-item>
-              <ion-item lines="none">
-                <ion-label>
-                  <p>{{ product.dtEvent | date: 'dd/MM/yy'  }}</p>
-                </ion-label>
-              </ion-item>
-            </ion-card>
-          </ion-col>
-          <ion-col>
-            <ion-card>
-              <ion-item lines="none">
-                <ion-avatar>
-                  <img src="assets/img/bike.png">
-                </ion-avatar>
-              </ion-item>
-              <ion-item lines="none">
-                <ion-label>
-                  <p>{{product.modalidade}}</p>
-                </ion-label>
-              </ion-item>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-card>
-              <ion-item lines="none">
-                  <ion-avatar>
-                      <img src="assets/img/pin.png">
-                    </ion-avatar>
-              </ion-item>
-              <ion-item lines="none">
-                <ion-label>
-                  <p>{{product.distance}}Km</p>
-                </ion-label>
-              </ion-item>
-            </ion-card>
-          </ion-col>
-          <ion-col>
-            <ion-card>
-              <ion-item lines="none">
-                  <ion-avatar>
-                      <img src="assets/img/smartwatch.png">
-                    </ion-avatar>
-              </ion-item>
-              <ion-item lines="none">
-                <ion-label>
-                  <p>{{product.nivel}}</p>
-                </ion-label>
-              </ion-item>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <ion-card>
-              <ion-item lines="none">
-                <ion-card-content>
-                  <p>{{product.description}}</p>
-                </ion-card-content>
-              </ion-item>
-            </ion-card>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-item>
-  </ion-card>
-  <ion-card>
-    <ion-list>
-      <ion-item *ngFor="let listUser of listUsers" lines="none">
-        <ion-icon slot="end" name="checkmark" color="success"></ion-icon>
-        <ion-avatar slot="start">
-          <img src="/assets/img/biker.png">
-        </ion-avatar>
-        <ion-label>
-          <h2>{{listUser.nameUser}}</h2>
-        </ion-label>
-      </ion-item>
-    </ion-list>
-  </ion-card>
-</ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-    <ion-button expand="block" (click)="addUserList()" *ngIf="showAdd" color="primary">
-      <ion-label>Confirme sua presença</ion-label>
-    </ion-button>
-    <ion-button expand="block" (click)="deleteUserList()" *ngIf="showDelete" color="danger">
-      <ion-label>Cancelar presença</ion-label>
-    </ion-button>
-  </ion-toolbar>
-</ion-footer> -->
